; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_aq_release_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_aq_release_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_hw = type { i32 }
%struct.i40e_asq_cmd_details = type { i32 }
%struct.i40e_aq_desc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.i40e_aqc_request_resource = type { i32, i32 }

@.str = private unnamed_addr constant [25 x i8] c"i40e_aq_release_resource\00", align 1
@i40e_aqc_opc_release_resource = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i40e_aq_release_resource(%struct.i40e_hw* %0, i32 %1, i32 %2, %struct.i40e_asq_cmd_details* %3) #0 {
  %5 = alloca %struct.i40e_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.i40e_asq_cmd_details*, align 8
  %9 = alloca %struct.i40e_aq_desc, align 4
  %10 = alloca %struct.i40e_aqc_request_resource*, align 8
  %11 = alloca i32, align 4
  store %struct.i40e_hw* %0, %struct.i40e_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.i40e_asq_cmd_details* %3, %struct.i40e_asq_cmd_details** %8, align 8
  %12 = getelementptr inbounds %struct.i40e_aq_desc, %struct.i40e_aq_desc* %9, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = bitcast i32* %13 to %struct.i40e_aqc_request_resource*
  store %struct.i40e_aqc_request_resource* %14, %struct.i40e_aqc_request_resource** %10, align 8
  %15 = call i32 @DEBUGFUNC(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @i40e_aqc_opc_release_resource, align 4
  %17 = call i32 @i40e_fill_default_direct_cmd_desc(%struct.i40e_aq_desc* %9, i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @CPU_TO_LE16(i32 %18)
  %20 = load %struct.i40e_aqc_request_resource*, %struct.i40e_aqc_request_resource** %10, align 8
  %21 = getelementptr inbounds %struct.i40e_aqc_request_resource, %struct.i40e_aqc_request_resource* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @CPU_TO_LE32(i32 %22)
  %24 = load %struct.i40e_aqc_request_resource*, %struct.i40e_aqc_request_resource** %10, align 8
  %25 = getelementptr inbounds %struct.i40e_aqc_request_resource, %struct.i40e_aqc_request_resource* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %27 = load %struct.i40e_asq_cmd_details*, %struct.i40e_asq_cmd_details** %8, align 8
  %28 = call i32 @i40e_asq_send_command(%struct.i40e_hw* %26, %struct.i40e_aq_desc* %9, i32* null, i32 0, %struct.i40e_asq_cmd_details* %27)
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  ret i32 %29
}

declare dso_local i32 @DEBUGFUNC(i8*) #1

declare dso_local i32 @i40e_fill_default_direct_cmd_desc(%struct.i40e_aq_desc*, i32) #1

declare dso_local i32 @CPU_TO_LE16(i32) #1

declare dso_local i32 @CPU_TO_LE32(i32) #1

declare dso_local i32 @i40e_asq_send_command(%struct.i40e_hw*, %struct.i40e_aq_desc*, i32*, i32, %struct.i40e_asq_cmd_details*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
